# hello-world

./: .gitignore  Makefile  comment.txt  hellotext.h  main.cpp  readme.md
algorithms/: binary_search.py  readme.md
algorithms/02 - selection sort/: CMakeLists.txt  main.cpp
algorithms/03 - recursion/divide_and_rule/: main.py
algorithms/03 - recursion/recursion/: CMakeLists.txt  main.cpp
algorithms/04 - quicksort/python/: mergesort.py  quicksort.py
algorithms/05 - hash table/chain table cpp/ChainHashTable/: CMakeLists.txt  chainhashtable.h  division.h  exceptions.h  hash.h  hash_interface.h  main.cpp  multiplication.h  string_method.h  userdata.h
algorithms/05 - hash table/chain table cpp/ChainHashTable/hash_functions/: common.h  division.h  multiplication.h  string_method.h
algorithms/05 - hash table/open addressing table py/: main.py
algorithms/other/01 - bubble sort/: CMakeLists.txt  main.c
android/AndroidHelloWorld/: settings.gradle.kts
android/AndroidHelloWorld_Kotlin/: settings.gradle.kts
android/AndroidHelloWorld_Studio/: settings.gradle
android/AndroidUsesNativeLibraries/: readme.md  settings.gradle
android/JNI_Class/: commands.txt
android/JNI_Class/src/: Handle.h  JavaClass.cpp  JavaClass.h  JavaClass.java  Main.java
android/JNI_Example/: commands.txt
android/JNI_Example/src/: AwesomeLib.cpp  AwesomeLib.h  AwesomeLib.java  Main.java
android/JNI_ReturnObject/: commands.txt
android/JNI_ReturnObject/src/: Complex.java  JavaClass.cpp  JavaClass.h  JavaClass.java  Main.java
android/JNI_Test/: commands.txt
android/JNI_Test/src/: AwesomeLib.cpp  AwesomeLib.h  AwesomeLib.java  Main.java
android/JavaHelloWorld/src/: ArithmeticAction.java  Calculator.java  Main.java
boost_test/test_example_1.58/: CMakeLists.txt  main.cpp  readme.txt
boost_test/test_levels/: CMakeLists.txt  main.cpp
boost_test/test_with_fixtures/: CMakeLists.txt  case_1.cpp  case_2.cpp  main.cpp  myfixture.cpp  myfixture.h
c/01/: CMakeLists.txt  main.c  main1.c  readme.md
c/02/: CMakeLists.txt  main.c  readme.md
c/03/: CMakeLists.txt  main.c  readme.md
c/04/: main.c  readme.md
c/05/: readme.md
c/05/dynamic_lib/: CMakeLists.txt
c/05/static_lib/: CMakeLists.txt
c/05/test/: CMakeLists.txt  main.c
cmake/01/: CMakeLists.txt  readme.md
cmake/02/: CMakeLists.txt  main.c  readme.md
cmake/02/inc/: calc.h
cmake/03/: CMakeLists.txt  readme.md
cmake/03/src/: calc.c
cmake/04/: CMakeLists.txt  main.m  readme.md
cpp/001/shared+lambda/: CMakeLists.txt  main.cpp
cpp/002/promise_future/: CMakeLists.txt  main.cpp
cpp/004/const_const/: CMakeLists.txt  main.cpp
cpp/005/tie_or_make_tuple/: CMakeLists.txt  main.cc
cpp/006/operators/: fraction.cc  fraction.h  main.cc  makefile
cpp/007/transform/: CMakeLists.txt  main.cpp
cpp/008/rule_of_five_(ctors_and_operators)/: CMakeLists.txt  main.cc  myclass.cc  myclass.h
cpp/009/my_shared_ptr/: main.cpp  mysharedptr.h
cpp/010/virtual_destructor/: CMakeLists.txt  main.cpp
cpp17/001-structured_binding/: CMakeLists.txt  main.cpp
hello/: Makefile  Makefile2  Makefile3  hellotext.cpp  main.cpp  readme.md
obj-c/01_calc/: main.m  makefile
obj-c/02_calc/: calc.h  calc.m  main.m  makefile
obj-c/03_list/: MyClass.h  MyClass.m  list.h  list.m  main.m  makefile
obj-c/04_inheritance/: based.h  based.m  derived.h  derived.m  main.m  makefile
obj-c/04_polymorph/: main.m  makefile  objects.h  objects.m
obj-c/04_polymorph_2/: CMakeLists.txt  classes.h  classes.m  main.m  readme.md
obj-c/05_dynamic_typing/: main.m  makefile  object1.h  object1.m  object2.h  object2.m
obj-c/07_exceptions/: main.m  makefile  myclass.h  myclass.m  myexception.h  myexception.m
obj-c/07_questions_about_classes/: classes.h  classes.m  main.m  makefile
obj-c/08_categories/: calc+math.h  calc+math.m  calc.h  calc.m  calcmath.h  calcmath.m  main.m  makefile  unnecessary.h  unnecessary.m
obj-c/14_blocks/: CMakeLists.txt  main.m
obj-c/16_strings/: CMakeLists.txt  main.m  myclass.h  myclass.m
obj-c/17_substrings/: main.m
obj-c/18_mutable_strings/: CMakeLists.txt  main.m
obj-c/19_other_strings_methods/: CMakeLists.txt  file.txt  main.m
obj-c/20_decimal_numbers/: CMakeLists.txt  main.m
obj-c/29_weather/: .gitignore  TestData.json
qt/cppFromQml/: readme.md
qt/qStateMachine/: StatesExample.pro
qt/qmlFromCpp/: CMakeLists.txt  readme.md
qt/qmlFromCpp/res/: main.qml
qt/qmlFromCpp/src/: action.h  calc.cpp  calc.h  main.cpp
qt/qquickwidget/: .gitignore  CMakeLists.txt  QQuickWidgetExample.pro  readme.md
qt/qquickwidget/src/: main.cpp  main.qml  widget.cpp  widget.h
socket/internet/1_win - message/client/src/: CMakeLists.txt  main.cpp
socket/internet/2_chat/client/: CMakeLists.txt
socket/internet/2_chat/client/src/: core.cpp  core.h  event.h  main.cpp  receiver.h
socket/internet/2_chat/client/ui/: NameRequestPopup.qml  main.qml
socket/internet/2_chat/server/: CMakeLists.txt
socket/internet/2_chat/server/src/: common.h  messagequeue.h  receiver.cpp
socket/internet/3_universal_example/project1/: CMakeLists.txt  readme.md
swift/02_functions/: anonymous.swift  closures.swift  curried.swift  escaping.swift  main.swift  references.swift  second.swift
swift/05_operators/: assertions1.swift  assertions2.swift  cycle1.swift  cycle2.swift  fallthrough_switch.swift  guard.swift  if.swift  range_switch.swift  switch.swift  tuple_switch.swift
swift/06_optional/: optional.swift  optional_retrieving.swift
swift/09_enums/: associated.swift  main.swift  other.swift  raw.swift
swift/10_struct/: main.swift
thread/004_thread/: main.cpp
thread/005_jthread/: CMakeLists.txt  main.cpp  readme.md
thread/006_passing_arguments_to_thread/: CMakeLists.txt  main.cpp  readme.md
thread/007_condition_variable/: CMakeLists.txt  main.cpp  queue.cpp  queue.h
thread/1/: CMakeLists.txt  core.cpp  core.h  main.cpp  main.qml  mainthread.cpp  mainthread.h  messagequeue.cpp  messagequeue.h  readme.md
thread/2_mutableMutex/: CMakeLists.txt  main.cpp
thread/3_cout/: CMakeLists.txt  main.cpp  mtcout.h
(+475 files in other folders)
